--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Siste kjærlighet</title>
 </head>
 <body>
-    
+    <div id="app"></div>
+    <script src="model.js"></script>
+    <script src="./view/registerview.js"></script>
 </body>
 </html>
