--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/login.css">
     <title>Siste kjærlighet</title>
+    <link rel="stylesheet" href="style/mainpage.css".css>
+    <link rel="stylesheet" href="style/grid.css">
 </head>
 <body>
     <div id="app"></div>
     <script src="model.js"></script>
     <script src="./view/registerview.js"></script>
+    <script src="./view/mainpageView.js"></script>
 </body>
 </html>
