--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="./style/login.css">
     <link rel="stylesheet" href="./style/grid.css">
     <title>Siste kjærlighet</title>
-    <link rel="stylesheet" href="style/mainpage.css".css>
+    <link rel="stylesheet" href="style/mainpage.css">
     <link rel="stylesheet" href="style/grid.css">
+    <link rel="stylesheet" href="style/yourprofile.css">
 </head>
 <body>
     <div id="app"></div>
     <script src="model.js"></script>
     <script src="./view/registerview.js"></script>
     <script src="./view/mainpageView.js"></script>
+    <script src="./view/yourprofileview.js"></script>
 </body>
 </html>
