--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <script src="model.js"></script>
     <script src="./view/registerview.js"></script>
     <script src="./view/mainpageView.js"></script>
+    <script src="./controller/erikcontroller.js"></script>
 </body>
 </html>
