--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <script src="./view/registerview.js"></script>
     <script src="./view/mainpageView.js"></script>
     <script src="./view/yourprofileview.js"></script>
+    <script src="./controller/erikcontroller.js"></script>
 </body>
 </html>
