--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style/mainpage.css">
     <link rel="stylesheet" href="style/grid.css">
     <link rel="stylesheet" href="style/yourprofile.css">
+    <link rel="stylesheet" href="style/potentialmatches.css">
 </head>
 <body>
     <div id="app"></div>
@@ -17,5 +18,6 @@
     <script src="./view/registerview.js"></script>
     <script src="./view/mainpageView.js"></script>
     <script src="./view/yourprofileview.js"></script>
+    <script src="./view/potentialmatches.js"></script>
 </body>
 </html>
