--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@
     <script src="./view/yourprofileview.js"></script>
     <script src="./view/potentialmatches.js"></script>
     <script src="./controller/erikcontroller.js"></script>
+
+    <script id="viewFunction">
+        registerView();
+    </script>
 </body>
 </html>
