--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="style/grid.css">
     <link rel="stylesheet" href="style/yourprofile.css">
     <link rel="stylesheet" href="style/potentialmatches.css">
+    <link rel="stylesheet" href="style/allmessages.css">
+    <link rel="stylesheet" href="style/messages.css">
 </head>
 <body>
     <div id="app"></div>
@@ -19,6 +21,8 @@
     <script src="./view/mainpageView.js"></script>
     <script src="./view/yourprofileview.js"></script>
     <script src="./view/potentialmatches.js"></script>
+    <script src="./view/allmessagesView.js"></script>
+    <script src="./view/messageview.js"></script>
     <script src="./controller/erikcontroller.js"></script>
 </body>
 </html>
