--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <script src="./controller/erikcontroller.js"></script>
     
     <script id="viewFunction">
-
+        messageView('crab666');
+        // mainpageView();
     </script>
 </body>
 </html>
