--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <script src="model.js"></script>
     <script src="./view/registerview.js"></script>
+    <script src="./view/loginview.js"></script>
     <script src="./view/mainpageView.js"></script>
     <script src="./view/yourprofileview.js"></script>
     <script src="./view/potentialmatches.js"></script>
@@ -27,9 +28,7 @@
     <script src="./controller/erikcontroller.js"></script>
     
     <script id="viewFunction">
-        registerView();
-        
-        // mainpageView();
+        loginView();
     </script>
 </body>
 </html>
