--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="style/potentialmatches.css">
     <link rel="stylesheet" href="style/allmessages.css">
     <link rel="stylesheet" href="style/messages.css">
+    <link rel="stylesheet" href="style/nonepotentialmatches.css">
 </head>
 <body>
     <div id="app"></div>
@@ -23,12 +24,14 @@
     <script src="./view/mainpageView.js"></script>
     <script src="./view/yourprofileview.js"></script>
     <script src="./view/potentialmatches.js"></script>
+    <script src="./view/nonepotentialmatchesview.js"></script>
     <script src="./view/allmessagesView.js"></script>
     <script src="./view/messageview.js"></script>
     <script src="./controller/erikcontroller.js"></script>
+    <script src="./controller/krillecontroller.js"></script>
     
     <script id="viewFunction">
-        loginView();
+        nonePotentialMatchesView();
     </script>
 </body>
 </html>
