--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script src="./controller/krillecontroller.js"></script>
     
     <script id="viewFunction">
-        nonePotentialMatchesView();
+        mainpageView();
     </script>
 </body>
 </html>
