--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <script src="./controller/krillecontroller.js"></script>
     
     <script id="viewFunction">
-        mainpageView();
+        loginView();
     </script>
 </body>
 </html>
