--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="./view/messageview.js"></script>
     <script src="./controller/erikcontroller.js"></script>
     <script src="./controller/krillecontroller.js"></script>
+    <script src="norge.js"></script>
     
     <script id="viewFunction">
         registerView();
